--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<scm>
+	    <connection>ssh://git@88.198.164.179/~/repos/jLange.git</connection>
+	    <developerConnection>ssh://git@88.198.164.179/~/repos/jLange.git</developerConnection>
+		<tag>HEAD</tag>
 		<url>ssh://git@88.198.164.179/~/repos/jLange.git</url>
 	</scm>
 
@@ -66,6 +69,11 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-release-plugin</artifactId>
+        		<version>2.2.2</version>
+      		</plugin>
 		</plugins>
 	</build>
 	<dependencies>
