--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<scm>
-	    <connection>scm:ssh://git@88.198.164.179/~/repos/jLange.git</connection>
-	    <developerConnection>scm:ssh://git@88.198.164.179/~/repos/jLange.git</developerConnection>
+	    <connection>scm:git:ssh://git@88.198.164.179/~/repos/jLange.git</connection>
+	    <developerConnection>scm:git:ssh://git@88.198.164.179/~/repos/jLange.git</developerConnection>
 		<tag>HEAD</tag>
 		<url>ssh://git@88.198.164.179/~/repos/jLange.git</url>
 	</scm>
