--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -85,18 +86,12 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty</artifactId>
-			<version>3.4.2.Final</version>
-			<type>jar</type>
+			<version>3.4.5.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.htmlparser</groupId>
 			<artifactId>htmlparser</artifactId>
 			<version>1.6</version>
-		</dependency>
-		<dependency>
-			<groupId>org.littleshoot</groupId>
-			<artifactId>littleproxy</artifactId>
-			<version>0.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.jtidy</groupId>
@@ -113,5 +108,11 @@
 			<artifactId>yuicompressor</artifactId>
 			<version>2.4.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<version>1.6.4</version>
+		</dependency>
 	</dependencies>
+
 </project>
