--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=ERROR, A1
+log4j.rootLogger=INFO, A1
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
@@ -8,7 +8,5 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
-log4j.logger.org.littleshoot.proxy.HttpRequestHandler=WARN
-log4j.logger.org.littleshoot.proxy.HttpRelayingHandler=WARN
 #log4j.logger.org.jlange.proxy.plugin=DEBUG
-#log4j.logger.org.jlange.proxy.HttpResponseFilters$ResponseFilter=DEBUG
+log4j.logger.org.jlange.proxy.HttpResponseFilters$ResponseFilter=INFO
