log to file too

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,12 +1,18 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=INFO, A1
-
-# A1 is set to be a ConsoleAppender.
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-
-# A1 uses PatternLayout.
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.rootLogger=WARN, TextFile, A1
 
 #log4j.logger.org.jlange.proxy.plugin=DEBUG
 log4j.logger.org.jlange.proxy.HttpResponseFilters$ResponseFilter=INFO
+#log4j.logger.org.jlange.proxy.http.OutboundChannelPool=DEBUG
+
+# A1 is set to be a ConsoleAppender.
+log4j.appender.A1=org.apache.log4j.ConsoleAppender
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern=%-10r [%-20t] %-5p %-50c - %m%n
+
+# log into textfile
+log4j.appender.TextFile=org.apache.log4j.FileAppender
+log4j.appender.TextFile.File=log.txt
+log4j.appender.TextFile.Append=false
+log4j.appender.TextFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.TextFile.layout.ConversionPattern=%-10r [%-20t] %-5p %-50c - %m%n
