--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,8 +2,7 @@
 log4j.rootLogger=WARN, TextFile, A1
 
 #log4j.logger.org.jlange.proxy.plugin=DEBUG
-log4j.logger.org.jlange.proxy.HttpResponseFilters$ResponseFilter=INFO
-#log4j.logger.org.jlange.proxy.http.OutboundChannelPool=DEBUG
+#log4j.logger.org.jlange.proxy.outbound.OutboundChannelPool=DEBUG
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
