prepare release jLange-0.0.3

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.jlange</groupId>
 	<artifactId>jLange</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<packaging>jar</packaging>
 	<scm>
 		<connection>scm:git:ssh://git@88.198.164.179/~/repos/jLange.git</connection>
