proxy strategies handle almost everything

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,8 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=INFO, TextFile, A1
+log4j.rootLogger=WARN, TextFile, A1
 
 #log4j.logger.org.jlange.proxy.plugin=DEBUG
-#log4j.logger.org.jlange.proxy.outbound.OutboundChannelPool=DEBUG
+#log4j.logger.org.jlange.proxy.inbound=DEBUG
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
