set default loglevel to warn

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=INFO, TextFile, A1
+log4j.rootLogger=WARN, TextFile, A1
 
 #log4j.logger.org.jlange.proxy.plugin=DEBUG
 #log4j.logger.org.jlange.proxy.inbound=DEBUG
