--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.8</version>
+		</dependency>
 	</dependencies>
 
 </project>
