limit outbound connections

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -3,3 +3,6 @@ jLange.tmp=/tmp/jLange/
 # SSL Configuration
 jLange.ssl.store=jlange_keystore.jks
 jLange.ssl.key=changeme
+
+# Outbound connections
+jLange.outbound.max_connections=12
