tmp directory handling

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -1,8 +1,9 @@
-jLange.tmp=/tmp/jLange/
-
 # SSL Configuration
 jLange.ssl.store=jlange_keystore.jks
 jLange.ssl.key=changeme
+
+# proxy settings
+jLange.proxy.tmp=/tmp
 
 # Outbound connections
 jLange.outbound.max_connections=12
