set default compression level to config

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -4,6 +4,7 @@ jLange.ssl.key=changeme
 
 # proxy settings
 jLange.proxy.tmp=/tmp
+jLange.proxy.compression_level=7
 
 # Outbound connections
 jLange.outbound.max_connections=12
