make ports configurable

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -3,6 +3,8 @@ jLange.ssl.store=jlange_keystore.jks
 jLange.ssl.key=changeme
 
 # proxy settings
+jLange.proxy.http.port=8080
+jLange.proxy.spdy.port=8443
 jLange.proxy.tmp=/tmp
 jLange.proxy.compression_level=7
 
