--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,8 @@
 # Set root logger level to DEBUG and its only appender to A1.
 log4j.rootLogger=WARN, TextFile, A1
 
+log4j.logger.org.jlange.proxy.Proxy=INFO
+log4j.logger.org.jlange.proxy.Spdy=INFO
 #log4j.logger.org.jlange.proxy.inbound=INFO
 #log4j.logger.org.jlange.proxy.outbound=INFO
 #log4j.logger.org.jlange.proxy.plugin=INFO
