fix logging to indicate start of http proxy

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # Set root logger level to DEBUG and its only appender to A1.
 log4j.rootLogger=WARN, TextFile, A1
 
-log4j.logger.org.jlange.proxy.Proxy=INFO
+log4j.logger.org.jlange.proxy.Http=INFO
 log4j.logger.org.jlange.proxy.Spdy=INFO
 #log4j.logger.org.jlange.proxy.inbound=INFO
 #log4j.logger.org.jlange.proxy.outbound=INFO
