--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -1,12 +1,18 @@
-# SSL Configuration
-jLange.ssl.store=jlange_keystore.jks
-jLange.ssl.key=changeme
+## HTTP proxy configurations
+#jLange.proxy.http.enabled=true
+#jLange.proxy.http.port=8080
+#jLange.proxy.http.speedup=120
 
-# proxy settings
-jLange.proxy.http.port=8080
-jLange.proxy.spdy.port=8443
-jLange.proxy.tmp=/tmp
-jLange.proxy.compression_level=7
+## SPDY proxy configurations
+#jLange.proxy.spdy.enabled=false
+#jLange.proxy.spdy.port=8443
+#jLange.proxy.spdy.speedup=0
+#jLange.proxy.spdy.ssl.store=
+#jLange.proxy.spdy.ssl.key=
 
-# Outbound connections
-jLange.outbound.max_connections=12
+## General proxy configurations
+#jLange.proxy.tmp=/tmp
+#jLange.proxy.compression_level=7
+
+## Outbound configurations
+#jLange.outbound.max_used_connections=12
