configuration schema change, plugins can be switched off

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -1,18 +1,24 @@
 ## HTTP proxy configurations
-#jLange.proxy.http.enabled=true
-#jLange.proxy.http.port=8080
-#jLange.proxy.http.speedup=120
+#org.jlange.proxy.http.enabled=true
+#org.jlange.proxy.http.port=8080
+#org.jlange.proxy.http.speedup=120
 
 ## SPDY proxy configurations
-#jLange.proxy.spdy.enabled=false
-#jLange.proxy.spdy.port=8443
-#jLange.proxy.spdy.speedup=0
-#jLange.proxy.spdy.ssl.store=
-#jLange.proxy.spdy.ssl.key=
+#org.jlange.proxy.spdy.enabled=false
+#org.jlange.proxy.spdy.port=8443
+#org.jlange.proxy.spdy.speedup=0
+#org.jlange.proxy.spdy.ssl.store=
+#org.jlange.proxy.spdy.ssl.key=
 
 ## General proxy configurations
-#jLange.proxy.tmp=/tmp
-#jLange.proxy.compression_level=7
+#org.jlange.proxy.tmp=/tmp
+#org.jlange.proxy.compression_level=7
+
+## Plugins
+#org.jLange.proxy.plugin.response.HypertextCompressor.enabled=true
+#org.jLange.proxy.plugin.response.ImageCompressor.enabled=true
+#org.jLange.proxy.plugin.response.ResponseHeaderOptimizer.enabled=true
+#org.jLange.proxy.plugin.response.WeakCacheHeader.enabled=true
 
 ## Outbound configurations
-#jLange.outbound.max_used_connections=12
+#org.jlange.outbound.max_used_connections=12
