implement predefinedplugins and build a policy as example

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -19,6 +19,7 @@
 #org.jLange.proxy.plugin.response.ImageCompressor.enabled=true
 #org.jLange.proxy.plugin.response.ResponseHeaderOptimizer.enabled=true
 #org.jLange.proxy.plugin.response.WeakCacheHeader.enabled=true
+#org.jLange.proxy.plugin.predefinedResponse.RequestPolicy.enabled=true
 
 ## Outbound configurations
 #org.jlange.outbound.max_used_connections=12
