make proxy chaining configurable

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -24,3 +24,5 @@
 ## Outbound configurations
 #org.jlange.outbound.max_used_connections=12
 #org.jlange.outbound.max_response_size=2097152
+#org.jlange.outbound.proxy.host=
+#org.jlange.outbound.proxy.port=
