write responses chunked, fixes delayed writing

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -1,18 +1,17 @@
 ## HTTP proxy configurations
 #org.jlange.proxy.http.enabled=true
 #org.jlange.proxy.http.port=8080
-#org.jlange.proxy.http.speedup=120
 
 ## SPDY proxy configurations
 #org.jlange.proxy.spdy.enabled=false
 #org.jlange.proxy.spdy.port=8443
-#org.jlange.proxy.spdy.speedup=0
 #org.jlange.proxy.spdy.ssl.store=
 #org.jlange.proxy.spdy.ssl.key=
 
 ## General proxy configurations
 #org.jlange.proxy.tmp=/tmp
 #org.jlange.proxy.compression_level=7
+#org.jlange.proxy.chunk_size=8196
 
 ## Plugins
 #org.jLange.proxy.plugin.response.HypertextCompressor.enabled=true
