--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -14,11 +14,11 @@
 #org.jlange.proxy.chunk_size=8196
 
 ## Plugins
-#org.jLange.proxy.plugin.response.HypertextCompressor.enabled=true
-#org.jLange.proxy.plugin.response.ImageCompressor.enabled=true
-#org.jLange.proxy.plugin.response.ResponseHeaderOptimizer.enabled=true
-#org.jLange.proxy.plugin.response.WeakCacheHeader.enabled=true
-#org.jLange.proxy.plugin.predefinedResponse.RequestPolicy.enabled=true
+#org.jlange.proxy.plugin.response.ResponseHeaderOptimizer.enabled=true
+#org.jlange.proxy.plugin.response.WeakCacheHeader.enabled=true
+#org.jlange.proxy.plugin.response.HypertextCompressor.enabled=true
+#org.jlange.proxy.plugin.response.ImageCompressor.enabled=true
+#org.jlange.proxy.plugin.predefinedResponse.RequestPolicy.enabled=true
 
 ## Outbound configurations
 #org.jlange.outbound.max_used_connections=12
