--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=WARN, TextFile, A1
 
 log4j.logger.org.jlange.proxy.Http=INFO
 log4j.logger.org.jlange.proxy.Spdy=INFO
-log4j.logger.org.jlange.proxy.inbound=INFO
+#log4j.logger.org.jlange.proxy.inbound=INFO
 #log4j.logger.org.jlange.proxy.outbound=INFO
 log4j.logger.org.jlange.proxy.plugin=INFO
 
