extract outbound connection timeout to config

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -21,6 +21,7 @@
 #org.jlange.proxy.plugin.predefinedResponse.RequestPolicy.enabled=true
 
 ## Outbound configurations
+#org.jlange.outbound.connection_timeout=30
 #org.jlange.outbound.max_used_connections=12
 #org.jlange.outbound.max_response_size=2097152
 #org.jlange.outbound.proxy.host=
