load plugins from configuration file

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -14,11 +14,11 @@
 #org.jlange.proxy.chunk_size=8196
 
 ## Plugins
-#org.jlange.proxy.plugin.response.ResponseHeaderOptimizer.enabled=true
-#org.jlange.proxy.plugin.response.WeakCacheHeader.enabled=true
-#org.jlange.proxy.plugin.response.HypertextCompressor.enabled=true
-#org.jlange.proxy.plugin.response.ImageCompressor.enabled=true
-#org.jlange.proxy.plugin.predefinedResponse.RequestPolicy.enabled=true
+org.jlange.plugin.response=org.jlange.proxy.plugin.response.ResponseHeaderOptimizer
+org.jlange.plugin.response=org.jlange.proxy.plugin.response.WeakCacheHeader
+org.jlange.plugin.response=org.jlange.proxy.plugin.response.HypertextCompressor
+org.jlange.plugin.response=org.jlange.proxy.plugin.response.ImageCompressor
+org.jlange.plugin.predefined=org.jlange.proxy.plugin.predefinedResponse.RequestPolicy
 
 ## Outbound configurations
 #org.jlange.outbound.connection_timeout=30
