add plugin for proxy basic auth

--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -18,6 +18,7 @@ org.jlange.plugin.response=org.jlange.proxy.plugin.response.ResponseHeaderOptimi
 org.jlange.plugin.response=org.jlange.proxy.plugin.response.WeakCacheHeader
 org.jlange.plugin.response=org.jlange.proxy.plugin.response.HypertextCompressor
 org.jlange.plugin.response=org.jlange.proxy.plugin.response.ImageCompressor
+#org.jlange.plugin.predefined=org.jlange.proxy.plugin.predefinedResponse.ProxyBasicAuthentication
 org.jlange.plugin.predefined=org.jlange.proxy.plugin.predefinedResponse.RequestPolicy
 
 ## Outbound configurations
