--- a/src/main/resources/jLange.properties
+++ b/src/main/resources/jLange.properties
@@ -9,6 +9,8 @@
 #org.jlange.proxy.spdy.ssl.key=
 
 ## General proxy configurations
+#org.jlange.proxy.via.hostname=jLange
+#org.jlange.proxy.via.comment=
 #org.jlange.proxy.tmp=/tmp
 #org.jlange.proxy.compression_level=7
 #org.jlange.proxy.chunk_size=8196
